Backport for Java 7 compatibility